lang/macro/tests/ui/fail/C-03-constructor-missing-return.stderr
error: #[ink(constructor)] functions must have `Self` return type
 --> $DIR/C-03-constructor-missing-return.rs:3:1
  |
3 | #[ink::contract(version = "0.1.0")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
